--- a/pages/orbitingcubes/index.html
+++ b/pages/orbitingcubes/index.html
@@ -50,8 +50,8 @@
         </div>
     </div>
     <py-env>
-    - paths:
-        - ./utils/utils.py
+      - paths:
+          - ../static/py/utils/utils.py
     </py-env>
     <py-script src="OrbitingCubes_pyscript_threejs.py"></py-script>
 </body>
