Move Python utils to root

--- a/pages/orbitingcubes/index.html
+++ b/pages/orbitingcubes/index.html
@@ -51,7 +51,7 @@
     </div>
     <py-env>
     - paths:
-        - ./utils/utils.py
+        - ../static/py/utils/utils.py
     </py-env>
     <py-script src="OrbitingCubes_pyscript_threejs.py"></py-script>
 </body>
