Rename OrbitingCubes_pyscript_threejs.py orbitingcubes.py

--- a/pages/orbitingcubes-pyscript-threejs/index.html
+++ b/pages/orbitingcubes-pyscript-threejs/index.html
@@ -53,6 +53,6 @@
       - paths:
           - ../static/py/utils/utils.py
     </py-env>
-    <py-script src="OrbitingCubes_pyscript_threejs.py"></py-script>
+    <py-script src="orbitingcubes.py"></py-script>
 </body>
 </html>
