Add OrbitingWhiskers pyscript/three.js

--- a/pages/index.html
+++ b/pages/index.html
@@ -141,6 +141,7 @@
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingcubes-pyscript-threejs">OrbitingCubes</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-pyscript-threejs">OrbitingSquares</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-transcrypt-pyp5js">OrbitingSquares</a></span><span class="c2">, transcrypt/pyp5js</span></li>
+        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingwhiskers-pyscript-threejs">OrbitingWhiskers</a></span><span class="c2">, pyscript/three.js</span></li>
     </ul>
     <h2 class="c3"><span class="c9">Tech used</span></h2>
     <ul class="c7">
