Add minimal demo for pyscript/p5.js

--- a/pages/index.html
+++ b/pages/index.html
@@ -138,6 +138,7 @@
     <ul class="c7">
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="boxclock-pyscript-threejs">BoxClock</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-babylonjs">Minimal demo</a></span><span class="c2">, pyscript/Babylon.js</span></li>
+        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-p5js">Minimal demo</a></span><span class="c2">, pyscript/p5.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingcubes-pyscript-threejs">OrbitingCubes</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-pyscript-threejs">OrbitingSquares</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-transcrypt-pyp5js">OrbitingSquares</a></span><span class="c2">, transcrypt/pyp5js</span></li>
@@ -146,6 +147,7 @@
     <h2 class="c3"><span class="c9">Tech used</span></h2>
     <ul class="c7">
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://www.babylonjs.com">Babylon.js</a></span></li>
+        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://p5js.org">p5.js</a></span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://berinhard.github.io/pyp5js">pyp5js</a></span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://pyscript.net">pyscript</a></span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://threejs.org">three.js</a></span></li>
