Add Bouncy Bubbles pyscript/p5.js

--- a/pages/index.html
+++ b/pages/index.html
@@ -136,6 +136,7 @@
 <body class="c12">
     <h1 class="c6"><span class="c8">Demos for the web, written in Python</span></h1>
     <ul class="c7">
+        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="bouncy-bubbles-pyscript-p5js">Bouncy Bubbles</a></span><span class="c2">, pyscript/p5.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="boxclock-pyscript-threejs">BoxClock</a></span><span class="c2">, pyscript/three.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-babylonjs">Minimal demo</a></span><span class="c2">, pyscript/Babylon.js</span></li>
         <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-p5js">Minimal demo</a></span><span class="c2">, pyscript/p5.js</span></li>
