--- a/pages/index.html
+++ b/pages/index.html
@@ -1,159 +1,307 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <style type="text/css">
-        ul.__eight {
-            list-style-type: none
-        }
-        .__eight>li:before {
-            content: "\0025a0  "
-        }
-        li.li-bullet-0:before {
-            margin-left: -18pt;
-            white-space: nowrap;
-            display: inline-block;
-            min-width: 18pt
-        }
-        ol {
-            margin: 0;
-            padding: 0
-        }
-        table td,
-        table th {
-            padding: 0
-        }
-        .c6 {
-            padding-top: 0pt;
-            border-bottom-width: 0pt;
-            padding-bottom: 6.9pt;
-            line-height: 1.2;
-            border-bottom-style: solid;
-            orphans: 2;
-            widows: 2;
-            text-align: left
-        }
-        .c1 {
-            margin-left: 36pt;
-            padding-top: 0pt;
-            padding-left: 0pt;
-            padding-bottom: 6pt;
-            line-height: 1.15;
-            orphans: 2;
-            widows: 2;
-            text-align: left
-        }
-        .c8 {
-            color: #b4b4b9;
-            font-weight: 400;
-            text-decoration: none;
-            vertical-align: baseline;
-            font-size: 23pt;
-            font-family: "Ubuntu";
-            font-style: normal
-        }
-        .c9 {
-            color: #b4b4b9;
-            font-weight: 400;
-            text-decoration: none;
-            vertical-align: baseline;
-            font-size: 18pt;
-            font-family: "Ubuntu";
-            font-style: normal
-        }
-        .c2 {
-            color: #b4b4b9;
-            font-weight: 400;
-            text-decoration: none;
-            vertical-align: baseline;
-            font-size: 9pt;
-            font-family: "Ubuntu";
-            font-style: normal
-        }
-        .c3 {
-            padding-top: 0pt;
-            padding-bottom: 3pt;
-            line-height: 1.15;
-            orphans: 2;
-            widows: 2;
-            text-align: left
-        }
-        .c4 {
-            font-size: 9pt;
-            font-family: "Ubuntu";
-            color: #47c8f0;
-            font-weight: 400
-        }
-        .c12 {
-            background-color: #2e2e2e;
-            max-width: 540pt;
-            padding: 36pt 36pt 36pt 36pt
-        }
-        .c5 {
-            color: inherit;
-            text-decoration: inherit
-        }
-        .c7 {
-            padding: 0;
-            margin: 0
-        }
-        li {
-            color: #b4b4b9;
-            font-size: 11pt;
-            font-family: "Arial"
-        }
-        p {
-            margin: 0;
-            color: #b4b4b9;
-            font-size: 11pt;
-            font-family: "Arial"
-        }
-        h1 {
-            padding-top: 20pt;
-            color: #b4b4b9;
-            font-size: 20pt;
-            padding-bottom: 6pt;
-            font-family: "Arial";
-            line-height: 1.15;
-            page-break-after: avoid;
-            orphans: 2;
-            widows: 2;
-            text-align: left
-        }
-        h2 {
-            padding-top: 18pt;
-            color: #b4b4b9;
-            font-size: 16pt;
-            padding-bottom: 6pt;
-            font-family: "Arial";
-            line-height: 1.15;
-            page-break-after: avoid;
-            orphans: 2;
-            widows: 2;
-            text-align: left
-        }
-    </style>
+  <title>index</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./static/css/style-template.css">
+  <link rel="stylesheet" type="text/css" href="./static/css/solarized-dark.css">
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({"extensions":["tex2jax.js"],"jax":["input/TeX","output/HTML-CSS"],"messageStyle":"none","tex2jax":{"processEnvironments":false,"processEscapes":true,"inlineMath":[["$","$"],["\\(","\\)"]],"displayMath":[["$$","$$"],["\\[","\\]"]]},"TeX":{"extensions":["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]},"HTML-CSS":{"availableFonts":["TeX"]}});
+  </script>
+  <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js"></script>
+  <style>
+    /**
+ * prism.js Github theme based on GitHub's theme.
+ * @author Sam Clarke
+ */
+    code[class*="language-"],
+    pre[class*="language-"] {
+      color: #333;
+      background: none;
+      font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+      text-align: left;
+      white-space: pre;
+      word-spacing: normal;
+      word-break: normal;
+      word-wrap: normal;
+      line-height: 1.4;
+
+      -moz-tab-size: 8;
+      -o-tab-size: 8;
+      tab-size: 8;
+
+      -webkit-hyphens: none;
+      -moz-hyphens: none;
+      -ms-hyphens: none;
+      hyphens: none;
+    }
+
+    /* Code blocks */
+    pre[class*="language-"] {
+      padding: .8em;
+      overflow: auto;
+      /* border: 1px solid #ddd; */
+      border-radius: 3px;
+      /* background: #fff; */
+      background: #f5f5f5;
+    }
+
+    /* Inline code */
+    :not(pre)>code[class*="language-"] {
+      padding: .1em;
+      border-radius: .3em;
+      white-space: normal;
+      background: #f5f5f5;
+    }
+
+    .token.comment,
+    .token.blockquote {
+      color: #969896;
+    }
+
+    .token.cdata {
+      color: #183691;
+    }
+
+    .token.doctype,
+    .token.punctuation,
+    .token.variable,
+    .token.macro.property {
+      color: #333;
+    }
+
+    .token.operator,
+    .token.important,
+    .token.keyword,
+    .token.rule,
+    .token.builtin {
+      color: #a71d5d;
+    }
+
+    .token.string,
+    .token.url,
+    .token.regex,
+    .token.attr-value {
+      color: #183691;
+    }
+
+    .token.property,
+    .token.number,
+    .token.boolean,
+    .token.entity,
+    .token.atrule,
+    .token.constant,
+    .token.symbol,
+    .token.command,
+    .token.code {
+      color: #0086b3;
+    }
+
+    .token.tag,
+    .token.selector,
+    .token.prolog {
+      color: #63a35c;
+    }
+
+    .token.function,
+    .token.namespace,
+    .token.pseudo-element,
+    .token.class,
+    .token.class-name,
+    .token.pseudo-class,
+    .token.id,
+    .token.url-reference .token.variable,
+    .token.attr-name {
+      color: #795da3;
+    }
+
+    .token.entity {
+      cursor: help;
+    }
+
+    .token.title,
+    .token.title .token.punctuation {
+      font-weight: bold;
+      color: #1d3e81;
+    }
+
+    .token.list {
+      color: #ed6a43;
+    }
+
+    .token.inserted {
+      background-color: #eaffea;
+      color: #55a532;
+    }
+
+    .token.deleted {
+      background-color: #ffecec;
+      color: #bd2c00;
+    }
+
+    .token.bold {
+      font-weight: bold;
+    }
+
+    .token.italic {
+      font-style: italic;
+    }
+
+
+    /* JSON */
+    .language-json .token.property {
+      color: #183691;
+    }
+
+    .language-markup .token.tag .token.punctuation {
+      color: #333;
+    }
+
+    /* CSS */
+    code.language-css,
+    .language-css .token.function {
+      color: #0086b3;
+    }
+
+    /* YAML */
+    .language-yaml .token.atrule {
+      color: #63a35c;
+    }
+
+    code.language-yaml {
+      color: #183691;
+    }
+
+    /* Ruby */
+    .language-ruby .token.function {
+      color: #333;
+    }
+
+    /* Markdown */
+    .language-markdown .token.url {
+      color: #795da3;
+    }
+
+    /* Makefile */
+    .language-makefile .token.symbol {
+      color: #795da3;
+    }
+
+    .language-makefile .token.variable {
+      color: #183691;
+    }
+
+    .language-makefile .token.builtin {
+      color: #0086b3;
+    }
+
+    /* Bash */
+    .language-bash .token.keyword {
+      color: #0086b3;
+    }
+
+    /* highlight */
+    pre[data-line] {
+      position: relative;
+      padding: 1em 0 1em 3em;
+    }
+
+    pre[data-line] .line-highlight-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      display: block;
+      width: 100%;
+    }
+
+    pre[data-line] .line-highlight {
+      position: absolute;
+      left: 0;
+      right: 0;
+      padding: inherit 0;
+      margin-top: 1em;
+      background: hsla(24, 20%, 50%, .08);
+      background: linear-gradient(to right, hsla(24, 20%, 50%, .1) 70%, hsla(24, 20%, 50%, 0));
+      pointer-events: none;
+      line-height: inherit;
+      white-space: pre;
+    }
+
+    pre[data-line] .line-highlight:before,
+    pre[data-line] .line-highlight[data-end]:after {
+      content: attr(data-start);
+      position: absolute;
+      top: .4em;
+      left: .6em;
+      min-width: 1em;
+      padding: 0 .5em;
+      background-color: hsla(24, 20%, 50%, .4);
+      color: hsl(24, 20%, 95%);
+      font: bold 65%/1.5 sans-serif;
+      text-align: center;
+      vertical-align: .3em;
+      border-radius: 999px;
+      text-shadow: none;
+      box-shadow: 0 1px white;
+    }
+
+    pre[data-line] .line-highlight[data-end]:after {
+      content: attr(data-end);
+      top: auto;
+      bottom: .4em;
+    }
+  </style>
 </head>
-<body class="c12">
-    <h1 class="c6"><span class="c8">Demos for the web, written in Python</span></h1>
-    <ul class="c7">
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="bouncy-bubbles-pyscript-p5js">Bouncy Bubbles</a></span><span class="c2">, pyscript/p5.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="boxclock-pyscript-threejs">BoxClock</a></span><span class="c2">, pyscript/three.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-babylonjs">Minimal demo</a></span><span class="c2">, pyscript/Babylon.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="minimal-demo-pyscript-p5js">Minimal demo</a></span><span class="c2">, pyscript/p5.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingcubes-pyscript-threejs">OrbitingCubes</a></span><span class="c2">, pyscript/three.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-pyscript-p5js">OrbitingSquares</a></span><span class="c2">, pyscript/p5.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-pyscript-threejs">OrbitingSquares</a></span><span class="c2">, pyscript/three.js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingsquares-transcrypt-pyp5js">OrbitingSquares</a></span><span class="c2">, transcrypt/pyp5js</span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="orbitingwhiskers-pyscript-threejs">OrbitingWhiskers</a></span><span class="c2">, pyscript/three.js</span></li>
+
+<body for="html-export">
+  <div class="mume markdown-preview  ">
+    <h1 class="mume-header" id="pages">Pages</h1>
+
+    <h2 class="mume-header" id="sketches-and-demos-for-the-web-written-in-python">Sketches
+      and demos for the web, written in Python</h2>
+
+    <ul>
+      <li><a href="./boxclock-pyscript-threejs/">BoxClock (pyscript/three.js)</a></li>
+      <li><a href="./orbitingcubes-pyscript-threejs/">OrbitingCubes (pyscript/three.js)</a>
+      </li>
+      <li><a href="./orbitingsquares-pyscript-threejs/">OrbitingSquares
+          (pyscript/three.js)</a></li>
+      <li><a href="./orbitingwhiskers-pyscript-threejs/">OrbitingWhiskers
+          (pyscript/three.js)</a></li>
     </ul>
-    <h2 class="c3"><span class="c9">Tech used</span></h2>
-    <ul class="c7">
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://www.babylonjs.com">Babylon.js</a></span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://p5js.org">p5.js</a></span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://berinhard.github.io/pyp5js">pyp5js</a></span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://pyscript.net">pyscript</a></span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://threejs.org">three.js</a></span></li>
-        <li class="c1 li-bullet-0"><span class="c4"><a class="c5" href="https://transcrypt.org">transcrypt</a></span></li>
+    <h2 class="mume-header" id="examples-minimal-demos-ports-of-others-work">Examples
+      (minimal demos, ports of other&#x2019;s work)</h2>
+
+    <ul>
+      <li><a href="./bouncy-bubbles-pyscript-p5js/">Bouncy Bubbles (pyscript/p5.js)</a></li>
+      <li><a href="./minimal-demo-pyscript-babylonjs/">Minimal demo
+          (pyscript/Babylon.js)</a></li>
+      <li><a href="./minimal-demo-pyscript-p5js/">Minimal demo (pyscript/p5.js)</a></li>
     </ul>
+    <h2 class="mume-header"
+      id="abandonedbuggyexperimentalincomplateoldwip-sketches-and-demos">
+      Abandoned/buggy/experimental/incomplate/old/WIP sketches and demos</h2>
+
+    <ul>
+      <li><a href="./orbitingsquares-pyscript-p5js/">OrbitingSquares (pyscript/p5.js)</a>
+      </li>
+      <li><a href="./orbitingsquares-transcrypt-pyp5js/">OrbitingSquares
+          (transcrypt/pyp5js)</a></li>
+    </ul>
+    <h2 class="mume-header" id="tech-used">Tech used</h2>
+
+    <ul>
+      <li><a href="https://www.babylonjs.com">Babylon.js</a></li>
+      <li><a href="https://p5js.org">p5.js</a></li>
+      <li><a href="https://berinhard.github.io/pyp5js">pyp5js</a></li>
+      <li><a href="https://pyscript.net">pyscript</a></li>
+      <li><a href="https://threejs.org">three.js</a></li>
+      <li><a href="https://transcrypt.org">transcrypt</a></li>
+    </ul>
+
+  </div>
 </body>
 </html>
