Remove demos now hosted at GH pyscript/pyscript-collective
Redirect links

--- a/pages/index.html
+++ b/pages/index.html
@@ -276,10 +276,15 @@
       (minimal demos, ports of other&#x2019;s work)</h2>
 
     <ul>
-      <li><a href="./bouncy-bubbles-pyscript-p5js/">Bouncy Bubbles (pyscript/p5.js)</a></li>
-      <li><a href="./minimal-demo-pyscript-babylonjs/">Minimal demo
-          (pyscript/Babylon.js)</a></li>
-      <li><a href="./minimal-demo-pyscript-p5js/">Minimal demo (pyscript/p5.js)</a></li>
+      <li><a
+          href="https://github.com/pyscript/pyscript-collective/tree/main/examples/bouncy-bubbles-p5js/">Bouncy
+          Bubbles (pyscript/p5.js)</a></li>
+      <li><a
+          href="https://github.com/pyscript/pyscript-collective/tree/main/examples/babylonjs-minimal-demo.html">Minimal
+          demo (pyscript/Babylon.js)</a></li>
+      <li><a
+          href="https://github.com/pyscript/pyscript-collective/tree/main/examples/p5js-minimal-demo.html">Minimal
+          demo (pyscript/p5.js)</a></li>
     </ul>
     <h2 class="mume-header"
       id="abandonedbuggyexperimentalincomplateoldwip-sketches-and-demos">
