--- a/pages/boxclock-pyscript-threejs/index.html
+++ b/pages/boxclock-pyscript-threejs/index.html
@@ -11,12 +11,7 @@
           - ../static/py/utils/utils.py
     </py-env>
     <py-config>
-      - autoclose_loader: false
-      - runtimes:
-        -
-          src: "https://cdn.jsdelivr.net/pyodide/dev/full/pyodide.js"
-          name: pyodide-0.20-nightly
-          lang: python
+      - autoclose_loader: true
     </py-config>
 </head>
 <body>
