--- a/pages/orbitingsquares-pyscript-p5js/index.html
+++ b/pages/orbitingsquares-pyscript-p5js/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>pyscript/p5.js OrbitingSquares</title>
-  <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+  <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   <py-config>
     - autoclose_loader: true
